IF(BIICODE)
	include(${CMAKE_HOME_DIRECTORY}/biicode.cmake)
	INIT_BIICODE_BLOCK()
ELSE()
	IF(WIN32)
		INCLUDE_DIRECTORIES(C:/mrcore/include/mrcore) 
		LINK_DIRECTORIES(C:/mrcore/lib)
	ELSE(WIN32)
		INCLUDE_DIRECTORIES(/usr/local/mrcore/include/mrcore)
		LINK_DIRECTORIES(/usr/local/mrcore/lib)
	ENDIF(WIN32)	
	
ENDIF()

FIND_PACKAGE(wxWidgets COMPONENTS base core gl net aui adv xml)

IF(wxWidgets_FOUND)
	INCLUDE(${wxWidgets_USE_FILE})
ELSE()
    message(FATAL_ERROR "YOU SHOULD HAVE LOCALLY INSTALLED THE WXWIDGETS PACKAGE")
ENDIF()

	IF(WIN32)
		SET(RESOURCES "apolo.rc") 
	ELSE(WIN32)
		SET(RESOURCES "")
	ENDIF(WIN32)
IF(BIICODE)	
	SET(BII_apolo_SRC ${BII_apolo_SRC} ${RESOURCES})
	ADD_BIICODE_TARGETS()
	SET_TARGET_PROPERTIES(${BII_apolo_TARGET} PROPERTIES
				COMPILE_FLAGS "/D _CRT_SECURE_NO_WARNINGS"
				LINK_FLAGS "/SUBSYSTEM:WINDOWS")
	TARGET_LINK_LIBRARIES(${BII_apolo_TARGET} PUBLIC ${wxWidgets_LIBRARIES})
ELSE()
	file(GLOB ALL_SRC "${CMAKE_SOURCE_DIR}/*.cpp")
	ADD_EXECUTABLE(APOLO ${ALL_SRC} ${RESOURCES})


	IF(WIN32)
#		SET_TARGET_PROPERTIES(APOLO PROPERTIES
#				COMPILE_FLAGS "${wxWidgets_CXX_FLAGS} ${wxWidgets_DEFINITIONS}"
#				LINK_FLAGS "/SUBSYSTEM:WINDOWS")


		SET_TARGET_PROPERTIES(APOLO PROPERTIES
				COMPILE_FLAGS "/D _CRT_SECURE_NO_WARNINGS"
				LINK_FLAGS "/SUBSYSTEM:WINDOWS")
	ENDIF(WIN32)

	IF(WIN32)	
		TARGET_LINK_LIBRARIES(APOLO debug mrcore_d ${wxWidgets_LIBRARIES})	
		TARGET_LINK_LIBRARIES(APOLO optimized mrcore ${wxWidgets_LIBRARIES})
	ELSE(WIN32) #LINUX		
		TARGET_LINK_LIBRARIES(APOLO mrcore ${OPENGL_LIBRARIES} ${wxWidgets_LIBRARIES})
	ENDIF(WIN32)
    	
ENDIF()

IF(NOT MINGW)
	ADD_SUBDIRECTORY(apoloMex)
ENDIF()

	file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/bitmaps/ApoloImage.bmp DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
	file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/bitmaps/ApoloImage.bmp DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
IF(NOT BIICODE)
	ADD_EXECUTABLE(DEMO_APOLO_PORT demoApoloPort/demoApoloPort.cpp apoloMessage.cpp) 
	IF(WIN32)	
		TARGET_LINK_LIBRARIES(DEMO_APOLO_PORT debug mrcore_d )	
		TARGET_LINK_LIBRARIES(DEMO_APOLO_PORT optimized mrcore )
	ELSE(WIN32) #LINUX		
		TARGET_LINK_LIBRARIES(DEMO_APOLO_PORT mrcore ${OPENGL_LIBRARIES} ${wxWidgets_LIBRARIES})
	ENDIF(WIN32)
 ENDIF()
